styles/header.styl
// Reset a bunch of night mode styles #thanksRES
    {night}
        .side, #siteTable .thing .title, .side .leavemoderator, 
        .side .leavecontributor-button, .side .titlebox,
        .side .spacer .titlebox .redditname, .side .titlebox .flairtoggle, 
        .side .usertext-body .md ol, .side .usertext-body .md ol ol, 
        .side .usertext-body .md ol ol li, .side .titlebox form.flairtoggle,
        .side .md ul, .icon-menu a, body .content
            border none
            background none
            
        .side a, .md p a
            color inherit
    
    // Reset RES' night-mode tendency to colour even-numbered links
    {night} .listing-page .sitetable > div:nth-of-type(4n+1)
        background none

    // Change the default font (mostly)
    body
        font()


/**** HEADER ****
 *  The header area is anything encompassed within `#header` of reddit's 
 *  css. It includes the subreddit bar, the user bar, the subreddit 
 *  title, and the navigation tabs. Anything which may need to be moved 
 *  up here should also be included within this definition
 */
    // Remove the reddit logo—users can click 'front' if they want to go
    // to the homepage.
    a#header-img
        display none !important

    // `background-size cover` makes the background fill up the header
    // We can also center it, and we have some nice variable heights too
    #header
        height header_height
        min-height (header_height_max / 3)
        max-height header_height_max
        border none
        background url('header')
        background-size cover
        background-position center center


/*** Subreddit Header Bar ***
 *  This is the list of subreddits within the main header.
 *  In Slight, this has no background and is a part of the main header.
 */

    #sr-header-area
        background none
        border none
        
        // These bits are the different shortcut containers
        // We want to make room on the right for the user bar
        &, .width-clip, .res & #RESShortcutsEditContainer
            margin-right 325px
        .res & #RESShortcutsViewport
            margin-right 72px
        .loggedin & .width-clip
            margin-right 230px
        .width-clip
            z-index 2
            
        {night} &
            background none

    .sr-list 
        margin-right 55px
        margin-left 5px
    .loggedin & .sr-list
        margin-right 40px

    .sr-bar
        font(0, 500)
        #sr-header-area & a, a.gold, .separator, /#sr-more-link,
        /.dropdown.srdrop .selected
            background none
            font-size 9px !important
            color header_color !important
            
    #sr-more-link, .dropdown.srdrop .selected
        font(9px)
        padding 0 5px

    // RES Shortcuts area
    #RESShortcutsEditContainer 
        top 1px !important
        background none !important

    // Those really really annoying shortcut icons
    #RESShortcutsSort
    #RESShortcutsRight
    #RESShortcutsAdd
    #RESShortcutsTrash
    #RESShortcutsLeft 
        width 9px
        background none !important
        font-size 9px !important
        color alpha(header_color, 0) !important
        transition color 0.3s ease
        #sr-header-area:hover & 
            color header_color !important
        

/*** User Bar ***
 *  This needs to be moved upwards so that it merges with the subreddit 
 *  bar. Many of the icons should be replaced.
 */
     
    #header-bottom-right 
        top 0px
        right 3px
        padding 0 !important
        background none
        font(10px, 500)

        .res &
            top 0px
            height 13px

        .res & #userbarToggle
            display none !important

        a 
            color header_color
        
        // Don't show the user's karma if we've disabled it
        {ops(vote)}
            .user
                font-size 0px
                a
                    font-size 11px
                .userkarma
                    display none
                
        .separator
            font-size 0
            margin 0 4px
            padding none
            
        {night} &
            background none

    .user
        color header_color
        #RESAccountSwitcherIcon
            if not light
                sprite(1, 1)
            else
                sprite(1, 2)
            border 0
            padding 0
            margin 0 4px
            
            // Might need some layout changes if the userkarma is off
            {ops('vote')}
                margin -6px 0 0 4px

    .userkarma
        border-bottom none
        {night} &
            color header_color
            
    // RES Account Switcher & overlay
    #RESAccountSwitcherIconOverlay, #RESMainGearOverlay
        display block !important
        border none !important
        border-top-left-radius 2px !important
        border-top-right-radius 2px !important
        background-color backing !important
        opacity 0
        transition opacity 0.3s ease
        &:hover, &:hover + .RESDropdownList
            visibility visible !important
            opacity 1 !important

    #RESAccountSwitcherIconOverlay
        top 14px
        right 204px
        margin 4px 0 0 3px
        sprite(1, 1, important: true)
        
        {night} &
/* ... */

